fix gap at bottom of footer

--- a/styles.css
+++ b/styles.css
@@ -58,5 +58,5 @@ h3 {
     display: grid;
     justify-content: center;
     text-align: center;
-    margin: 0 auto 0 -20px;
+    margin: 0 auto -10px -20px;
 }
